<resources>
    <string name="app_name">地図で買い物リスト</string>
    <string name="shopping_list_title">買い物リスト</string>
    <string name="shopping_list_purchased_header">購入済み</string>
    <string name="shopping_list_empty_title">未購入アイテムはありません</string>
    <string name="shopping_list_empty_message">右下の＋ボタンから追加できます</string>
    <string name="shopping_list_linked_places_count">お店: %1$d件</string>
    <string name="shopping_list_add_item">アイテム追加</string>
    <string name="shopping_list_linked_places_header">選択したお店</string>
    <string name="shopping_list_remove_place">削除</string>
    <string name="shopping_list_add_dialog_title">アイテムを追加</string>
    <string name="shopping_list_add_dialog_title_hint">タイトル</string>
    <string name="shopping_list_add_dialog_note_hint">メモ（任意）</string>
...
